# AuditingLanguageModelsForHiddenObjectives

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: dpo_adversarial.yaml  dpo_smoke.yaml  dpo_sycophancy.yaml  eval.yaml
eval/: pyproject.toml
evals/results/: base.json  base_records.json  base_v1.json  base_v1_records.json  base_v3.json  base_v3_records.json  base_v3_records_vs_8b-applicableapplied-smoke10.json  base_v3_records_vs_8b-applicableapplied-smoke10_records.json  base_v3_records_vs_8b-fewshot-smoke10.json  base_v3_records_vs_8b-fewshot-smoke10_records.json  base_v3_records_vs_8b-fewshot.json  base_v3_records_vs_8b-fewshot_records.json  base_v3_records_vs_8b-strict-smoke10.json  base_v3_records_vs_8b-strict.json  base_v3_records_vs_gpt-oss-20b-high-smoke10.json  base_v3_records_vs_gpt-oss-20b-high.json  base_v3_records_vs_haiku-4.5-n200.json  base_v3_records_vs_haiku-4.5-smoke10-512tok.json  base_v3_records_vs_haiku-4.5-smoke10.json  base_v3_records_vs_opus-4.8-n200.json  base_v3_records_vs_opus-4.8-smoke10.json  base_v3_records_vs_sonnet5-applicableapplied-n200.json  base_v3_records_vs_sonnet5-applicableapplied-n200_records.json  base_v3_records_vs_sonnet5-applicableapplied-n200_records_vs_8b-applicableapplied-vs-sonnet5applicableapplied.json  base_v3_records_vs_sonnet5-applicableappliedconsistent-smoke10_records.json  (+16 more)
scripts/: plot_results.py  run_pipeline.sh  serve_vllm.sh  verify_serve_env.py  verify_train_env.py
serve/: pyproject.toml
tests/: test_config.py  test_judge.py  test_label.py  test_prepare.py  test_run_eval.py
(+17 files in other folders)
