[project]
name = "rm-sycophancy-train"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "torch==2.6.*",
    "unsloth",
    "unsloth_zoo",
    "trl",
    "peft",
    "transformers",
    "bitsandbytes",
    "xformers",
    "datasets",
    "accelerate",
    "pyyaml",
    "pytest",
    # torchao>=0.14 uses torch.utils._pytree.register_constant, which does not
    # exist in torch 2.6.0. Pin below that ceiling so unsloth_zoo's
    # torchao>=0.13.0 requirement resolves to a build compatible with torch 2.6.
    "torchao<0.14",
    # triton (pulled in by xformers/unsloth) imports setuptools at runtime
    # when discovering backends; not installed by default on Python 3.11.
    "setuptools",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu124"
url  = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
